Remove redundant Step 3 and add AI-Perf experiment examples
Changes:

1. Removed Step 3 (Verify Deployment Status)
   - Redundant: Step 2 already proves KV-aware routing works
   - If Step 2 shows routing decisions with cached blocks, no need to verify config
   - Cleaner lab flow

2. Added 'Optional: Experiment with Load Testing' section
   - AI-Perf commands for terminal use (not in notebook)
   - Three benchmark scenarios:
     * Low concurrency (1 concurrent, 100 requests) - baseline
     * High concurrency (4 concurrent, 200 requests) - multi-worker distribution
     * Sustained rate (10 rps, 200 requests) - steady load
   - Shows how to install aiperf
   - Notes what to observe: TTFT, throughput, worker distribution

3. Updated Summary wording
   - Changed 'distributed serving' to 'KV-aware routing'
   - More specific about use cases (system prompts, document contexts)

Result: Lab 3 now has clear flow:
- Section 1: Understand KV-aware routing
- Section 2: Deploy NATS
- Section 3: Environment Setup
- Section 4: Deploy with KV-aware routing
- Section 5: Visualize routing (Step 1 & 2 only, no redundant Step 3)
- Optional: Load testing with AI-Perf
- Summary & Troubleshooting

--- a/03-kv-aware-routing.ipynb
+++ b/03-kv-aware-routing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f87774e9",
+   "id": "9c811f6c",
    "metadata": {},
    "source": [
     "# Lab 3: KV-Aware Routing with Data-Parallel Workers\n",
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a25dcd18",
+   "id": "8c38ca8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "618b16ce",
+   "id": "c266debb",
    "metadata": {},
    "source": [
     "### Step 2: Install NATS with JetStream\n",
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3eb8b74",
+   "id": "08bcbd52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e7ca94d",
+   "id": "98b3beab",
    "metadata": {},
    "source": [
     "### Step 3: Verify NATS Deployment"
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf8e3f17",
+   "id": "cb831ca0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "799f9129",
+   "id": "8c4c59d9",
    "metadata": {},
    "source": [
     "### Step 4: Test NATS Connectivity (Optional)"
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc56fe08",
+   "id": "c177d2ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e470ca3",
+   "id": "874fbfcc",
    "metadata": {},
    "source": [
     "---\n",
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdfdc8f9",
+   "id": "7110d743",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96616446",
+   "id": "c1592848",
    "metadata": {},
    "source": [
     "---\n",
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47d72b3c",
+   "id": "beeb46a5",
    "metadata": {},
    "source": [
     "### Step 1: Check Current GPU Usage"
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3b90e94",
+   "id": "888c8fdb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40ec2067",
+   "id": "5b0bd224",
    "metadata": {},
    "source": [
     "### Step 2: Delete Lab 1 Deployment (If Still Running)\n",
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7cd51336",
+   "id": "cb2f3ba2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4bbd7203",
+   "id": "890c7806",
    "metadata": {},
    "source": [
     "### Step 3: Verify GPUs Are Available\n",
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48eb8dfb",
+   "id": "16b8d09c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21c8076c",
+   "id": "3557fc9d",
    "metadata": {},
    "source": [
     "---\n",
@@ -461,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f1eec01",
+   "id": "8f7d4425",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "834ac75d",
+   "id": "2674a243",
    "metadata": {},
    "source": [
     "**Key Configuration Flags:**\n",
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e63a2ef1",
+   "id": "82b487fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0131ac78",
+   "id": "f2d8267f",
    "metadata": {},
    "source": [
     "### Step 3: Wait for Deployment"
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce2d0995",
+   "id": "8ba7cedb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "556d4b5f",
+   "id": "ae5da84a",
    "metadata": {},
    "source": [
     "### Step 4: Test Basic Inference"
@@ -651,7 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff67b3d8",
+   "id": "fbbdeeb6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96c796fc",
+   "id": "dbbb0c1f",
    "metadata": {},
    "source": [
     "---\n",
@@ -691,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "908b52a6",
+   "id": "7fd19698",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24e6785f",
+   "id": "0772cb31",
    "metadata": {},
    "source": [
     "**Note on Measuring Cache Benefits**:\n",
@@ -756,7 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af74617c",
+   "id": "e413ba1d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -862,8 +862,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c6ea21d",
-   "metadata": {},
+   "id": "03b07bca",
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
    "source": [
     "**Understanding the Output:**\n",
     "\n",
@@ -903,67 +905,83 @@
     "\n",
     "This proves KV-aware routing is working! The router intelligently tracks which worker has which prefixes cached and directs requests accordingly, maximizing cache reuse and GPU efficiency.\n",
     "\n",
-    "### Step 3: Verify Deployment Status"
+    "### Optional: Experiment with Load Testing\n",
+    "\n",
+    "Want to see how KV-aware routing handles concurrent load? Use AI-Perf to send multiple requests:\n",
+    "\n",
+    "**Install AI-Perf** (if not already installed):"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b7130a6",
+   "id": "386b20df",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "export NAMESPACE=${NAMESPACE:-dynamo}\n",
-    "\n",
-    "echo \"=== KV-Aware Routing Deployment Status ===\"\n",
-    "echo \"\"\n",
-    "\n",
-    "# Check pod status\n",
-    "echo \"1. Pod Status:\"\n",
-    "kubectl get pods -n $NAMESPACE -l nvidia.com/dynamo-graph-deployment-name=vllm-kv-demo\n",
-    "echo \"\"\n",
-    "\n",
-    "# Check worker startup logs (shows NATS environment variable)\n",
-    "echo \"2. Worker Configuration (from pod env):\"\n",
-    "WORKER_POD=$(kubectl get pods -n $NAMESPACE -l nvidia.com/dynamo-component=VllmWorker,nvidia.com/dynamo-graph-deployment-name=vllm-kv-demo -o jsonpath='{.items[0].metadata.name}' 2>/dev/null)\n",
-    "\n",
-    "if [ -n \"$WORKER_POD\" ]; then\n",
-    "    echo \"Worker: $WORKER_POD\"\n",
-    "    kubectl get pod -n $NAMESPACE $WORKER_POD -o jsonpath='{.spec.containers[0].env[?(@.name==\"NATS_SERVER\")]}' | jq -r '\"\\(.name)=\\(.value)\"' 2>/dev/null || echo \"NATS_SERVER environment variable set\"\n",
-    "    echo \"\"\n",
-    "else\n",
-    "    echo \"⚠️ No worker pods found\"\n",
-    "    echo \"\"\n",
-    "fi\n",
-    "\n",
-    "# Check frontend configuration\n",
-    "echo \"3. Frontend Configuration (from pod env):\"\n",
-    "FRONTEND_POD=$(kubectl get pods -n $NAMESPACE -l nvidia.com/dynamo-component=Frontend,nvidia.com/dynamo-graph-deployment-name=vllm-kv-demo -o jsonpath='{.items[0].metadata.name}' 2>/dev/null)\n",
-    "\n",
-    "if [ -n \"$FRONTEND_POD\" ]; then\n",
-    "    echo \"Frontend: $FRONTEND_POD\"\n",
-    "    kubectl get pod -n $NAMESPACE $FRONTEND_POD -o jsonpath='{.spec.containers[0].env[?(@.name==\"NATS_SERVER\")]}' | jq -r '\"\\(.name)=\\(.value)\"' 2>/dev/null || echo \"NATS_SERVER environment variable set\"\n",
-    "    kubectl get pod -n $NAMESPACE $FRONTEND_POD -o jsonpath='{.spec.containers[0].args[0]}' | grep -o \"router-mode kv\" || echo \"Note: Check deployment YAML for router-mode kv\"\n",
-    "    echo \"\"\n",
-    "else\n",
-    "    echo \"⚠️ No frontend pod found\"\n",
-    "    echo \"\"\n",
-    "fi\n",
-    "\n",
-    "echo \"✓ Verification complete\"\n",
-    "echo \"\"\n",
-    "echo \"KV-aware routing is working if:\"\n",
-    "echo \"  - All pods are Running (1/1)\"\n",
-    "echo \"  - NATS_SERVER is configured (nats://nats.nats-system:4222)\"\n",
-    "echo \"  - Frontend has --router-mode kv in args\""
+    "pip install aiperf"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c55dce04",
+   "id": "b754b7bd",
    "metadata": {},
    "source": [
+    "**Run benchmarks** (in a terminal, not in notebook - can be resource intensive):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "977265bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "# Get your endpoint\n",
+    "export NODE_IP=$(kubectl get nodes -o jsonpath='{.items[0].status.addresses[?(@.type==\"InternalIP\")].address}')\n",
+    "export FRONTEND_URL=\"http://$NODE_IP:30200\"\n",
+    "\n",
+    "# Low concurrency baseline (1 concurrent request, 100 total)\n",
+    "aiperf profile \\\n",
+    "  --model Qwen/Qwen2.5-1.5B-Instruct \\\n",
+    "  --url $FRONTEND_URL \\\n",
+    "  --endpoint-type chat \\\n",
+    "  --streaming \\\n",
+    "  --concurrency 1 \\\n",
+    "  --request-count 100\n",
+    "\n",
+    "# High concurrency (4 concurrent requests, 200 total)\n",
+    "# This is where you'll see multi-worker distribution!\n",
+    "aiperf profile \\\n",
+    "  --model Qwen/Qwen2.5-1.5B-Instruct \\\n",
+    "  --url $FRONTEND_URL \\\n",
+    "  --endpoint-type chat \\\n",
+    "  --streaming \\\n",
+    "  --concurrency 4 \\\n",
+    "  --request-count 200\n",
+    "\n",
+    "# Sustained request rate (10 requests/sec, 200 total)\n",
+    "aiperf profile \\\n",
+    "  --model Qwen/Qwen2.5-1.5B-Instruct \\\n",
+    "  --url $FRONTEND_URL \\\n",
+    "  --endpoint-type chat \\\n",
+    "  --streaming \\\n",
+    "  --request-rate 10 \\\n",
+    "  --request-count 200"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "035cc92d",
+   "metadata": {},
+   "source": [
+    "**What to observe:**\n",
+    "- TTFT (Time To First Token) - lower is better\n",
+    "- Request throughput - higher concurrency should utilize both workers\n",
+    "- At high concurrency, check frontend logs to see requests distributed across both workers\n",
+    "\n",
     "---\n",
     "\n",
     "## Summary\n",
@@ -978,8 +996,8 @@
     "- Works on single nodes with multiple GPUs or across multi-node clusters\n",
     "\n",
     "**Key architectural choice:**\n",
-    "- Use **disaggregated serving** (Lab 1) for predictable latency on individual requests\n",
-    "- Use **distributed serving** (Lab 3) when you have high traffic with cache-friendly patterns\n",
+    "- Use **disaggregated serving** (Lab 1) for predictable latency with separate prefill/decode\n",
+    "- Use **KV-aware routing** (Lab 3) when you have high traffic with cache-friendly patterns (system prompts, document contexts)\n",
     "\n",
     "**Next steps:** Experiment with different worker counts, or monitor cache hit rates in Grafana.\n",
     "\n",
@@ -993,7 +1011,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3257e50",
+   "id": "ea768429",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1016,7 +1034,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2dfa6a9",
+   "id": "4dbd1ac6",
    "metadata": {},
    "source": [
     "### Workers Not Discovered"
@@ -1025,7 +1043,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5466770",
+   "id": "7dbf22e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1049,7 +1067,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba664993",
+   "id": "2b074e32",
    "metadata": {},
    "source": [
     "### No Requests Reaching Workers"
@@ -1058,7 +1076,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cca1ea71",
+   "id": "cfa6c2de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1082,7 +1100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e9c0edc",
+   "id": "f790d49c",
    "metadata": {},
    "source": [
     "### Understanding Cache Sharing with NIXL\n",
@@ -1116,7 +1134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc63a2c4",
+   "id": "1ae46f58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1133,7 +1151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d11d283f",
+   "id": "b8ff4615",
    "metadata": {},
    "source": [
     "### Step 2: Verify Lab 1 Deployment is Still Running\n",
@@ -1144,7 +1162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30246913",
+   "id": "ca2bc0e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1169,7 +1187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e42b7d4",
+   "id": "fbc0a7cd",
    "metadata": {},
    "source": [
     "---\n",
@@ -1186,7 +1204,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae705df7",
+   "id": "14c62e5f",
    "metadata": {},
    "source": [
     "### Community Resources\n",
