Add prerequisites and warnings to AI-Perf load testing section
Issue: Users getting connection refused errors and trying to run in notebook

Fixes:

1. Added prominent warning: ⚠️ Run in TERMINAL, not notebook
   - AI-Perf is resource-intensive
   - Can crash notebook kernel
   - Should be run separately

2. Added Prerequisites section:
   - Check deployment is running first
   - Verify NodePort service is accessible
   - Health check command: curl http://$NODE_IP:30200/health
   - Prevents connection refused errors

3. Added Troubleshooting subsection:
   - Connection refused → ensure deployment running and service created
   - Timeout errors → model may be loading, wait and retry
   - High error rate → check pod logs

4. Better flow:
   - Prerequisites BEFORE install instructions
   - Health check BEFORE running benchmarks
   - Clear error resolution steps

This prevents users from:
- Running AI-Perf in notebook (crashes kernel)
- Running benchmarks before deployment is ready (connection refused)
- Not knowing how to debug connection issues

Result: Users will check deployment status first, then run
benchmarks in terminal with confidence they'll work.

--- a/03-kv-aware-routing.ipynb
+++ b/03-kv-aware-routing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9c811f6c",
+   "id": "9ac4f7c3",
    "metadata": {},
    "source": [
     "# Lab 3: KV-Aware Routing with Data-Parallel Workers\n",
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c38ca8d",
+   "id": "97c51232",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c266debb",
+   "id": "7e7c9ddd",
    "metadata": {},
    "source": [
     "### Step 2: Install NATS with JetStream\n",
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08bcbd52",
+   "id": "dfd33016",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98b3beab",
+   "id": "ace06d8d",
    "metadata": {},
    "source": [
     "### Step 3: Verify NATS Deployment"
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb831ca0",
+   "id": "eb720ab6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c4c59d9",
+   "id": "660fc541",
    "metadata": {},
    "source": [
     "### Step 4: Test NATS Connectivity (Optional)"
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c177d2ee",
+   "id": "334a238f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "874fbfcc",
+   "id": "a8f610e0",
    "metadata": {},
    "source": [
     "---\n",
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7110d743",
+   "id": "f2c3781d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1592848",
+   "id": "54504a19",
    "metadata": {},
    "source": [
     "---\n",
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "beeb46a5",
+   "id": "507f5210",
    "metadata": {},
    "source": [
     "### Step 1: Check Current GPU Usage"
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "888c8fdb",
+   "id": "937eb037",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b0bd224",
+   "id": "c21a5090",
    "metadata": {},
    "source": [
     "### Step 2: Delete Lab 1 Deployment (If Still Running)\n",
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb2f3ba2",
+   "id": "b1581157",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "890c7806",
+   "id": "c4f19bef",
    "metadata": {},
    "source": [
     "### Step 3: Verify GPUs Are Available\n",
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16b8d09c",
+   "id": "e0ba8d49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3557fc9d",
+   "id": "92d77122",
    "metadata": {},
    "source": [
     "---\n",
@@ -461,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f7d4425",
+   "id": "e8d0a2f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2674a243",
+   "id": "3baf59f2",
    "metadata": {},
    "source": [
     "**Key Configuration Flags:**\n",
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82b487fa",
+   "id": "aaa445de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2d8267f",
+   "id": "a6d91285",
    "metadata": {},
    "source": [
     "### Step 3: Wait for Deployment"
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ba7cedb",
+   "id": "489970e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae5da84a",
+   "id": "aefc692a",
    "metadata": {},
    "source": [
     "### Step 4: Test Basic Inference"
@@ -651,7 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbbdeeb6",
+   "id": "835c86a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbbb0c1f",
+   "id": "433e5826",
    "metadata": {},
    "source": [
     "---\n",
@@ -691,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fd19698",
+   "id": "99e2e6cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0772cb31",
+   "id": "97a0c2f7",
    "metadata": {},
    "source": [
     "**Note on Measuring Cache Benefits**:\n",
@@ -756,7 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e413ba1d",
+   "id": "3f351e85",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03b07bca",
+   "id": "f43ae06b",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -907,15 +907,63 @@
     "\n",
     "### Optional: Experiment with Load Testing\n",
     "\n",
-    "Want to see how KV-aware routing handles concurrent load? Use AI-Perf to send multiple requests:\n",
+    "**⚠️ IMPORTANT: Run these commands in a TERMINAL (not in the notebook). AI-Perf can be resource-intensive.**\n",
     "\n",
+    "After completing Step 2 and confirming routing is working, you can experiment with load testing to see multi-worker distribution under concurrent load.\n",
+    "\n",
+    "**Prerequisites:**\n",
+    "\n",
+    "1. Make sure your Lab 3 deployment is running:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10f3640c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "kubectl get pods -n dynamo -l nvidia.com/dynamo-graph-deployment-name=vllm-kv-demo\n",
+    "# All pods should be Running (1/1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60289b63",
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
+   "source": [
+    "2. Verify the NodePort service is accessible:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8dfb8d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "export NODE_IP=$(kubectl get nodes -o jsonpath='{.items[0].status.addresses[?(@.type==\"InternalIP\")].address}')\n",
+    "curl -s http://$NODE_IP:30200/health || echo \"Service not ready yet\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d1f7227",
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
+   "source": [
     "**Install AI-Perf** (if not already installed):"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "386b20df",
+   "id": "30b643ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -925,21 +973,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b754b7bd",
+   "id": "41f4aed0",
    "metadata": {},
    "source": [
-    "**Run benchmarks** (in a terminal, not in notebook - can be resource intensive):"
+    "**Run benchmarks in a terminal:**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "977265bb",
+   "id": "fc3d9a42",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "# Get your endpoint\n",
+    "# Set up endpoint\n",
     "export NODE_IP=$(kubectl get nodes -o jsonpath='{.items[0].status.addresses[?(@.type==\"InternalIP\")].address}')\n",
     "export FRONTEND_URL=\"http://$NODE_IP:30200\"\n",
     "\n",
@@ -974,13 +1022,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "035cc92d",
+   "id": "676448d4",
    "metadata": {},
    "source": [
     "**What to observe:**\n",
     "- TTFT (Time To First Token) - lower is better\n",
     "- Request throughput - higher concurrency should utilize both workers\n",
     "- At high concurrency, check frontend logs to see requests distributed across both workers\n",
+    "\n",
+    "**Troubleshooting:**\n",
+    "- **Connection refused error**: Ensure Lab 3 deployment is running and service is created (Section 4 Step 2)\n",
+    "- **Timeout errors**: Model may still be loading, wait 30 seconds and retry\n",
+    "- **High error rate**: Check pod logs for issues: `kubectl logs -n dynamo -l nvidia.com/dynamo-component=Frontend`\n",
     "\n",
     "---\n",
     "\n",
@@ -1011,7 +1064,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea768429",
+   "id": "7b2bdd3a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1034,7 +1087,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4dbd1ac6",
+   "id": "ee53372c",
    "metadata": {},
    "source": [
     "### Workers Not Discovered"
@@ -1043,7 +1096,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7dbf22e8",
+   "id": "22741c30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1067,7 +1120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b074e32",
+   "id": "0a259232",
    "metadata": {},
    "source": [
     "### No Requests Reaching Workers"
@@ -1076,7 +1129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfa6c2de",
+   "id": "ca06c4d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1100,7 +1153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f790d49c",
+   "id": "e9da322e",
    "metadata": {},
    "source": [
     "### Understanding Cache Sharing with NIXL\n",
@@ -1134,7 +1187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ae46f58",
+   "id": "cea1b3ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1151,7 +1204,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8ff4615",
+   "id": "8d3858a1",
    "metadata": {},
    "source": [
     "### Step 2: Verify Lab 1 Deployment is Still Running\n",
@@ -1162,7 +1215,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca2bc0e2",
+   "id": "7d914203",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1187,7 +1240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbc0a7cd",
+   "id": "f0dd2f7a",
    "metadata": {},
    "source": [
     "---\n",
@@ -1204,7 +1257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14c62e5f",
+   "id": "7f8af964",
    "metadata": {},
    "source": [
     "### Community Resources\n",
