--- a/03-kv-aware-routing.ipynb
+++ b/03-kv-aware-routing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9ac4f7c3",
+   "id": "5c9088a8",
    "metadata": {},
    "source": [
     "# Lab 3: KV-Aware Routing with Data-Parallel Workers\n",
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97c51232",
+   "id": "ff67a835",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e7c9ddd",
+   "id": "403bffb7",
    "metadata": {},
    "source": [
     "### Step 2: Install NATS with JetStream\n",
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfd33016",
+   "id": "01c05caa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ace06d8d",
+   "id": "9dcd48e4",
    "metadata": {},
    "source": [
     "### Step 3: Verify NATS Deployment"
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb720ab6",
+   "id": "765dd071",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "660fc541",
+   "id": "8bc22ace",
    "metadata": {},
    "source": [
     "### Step 4: Test NATS Connectivity (Optional)"
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "334a238f",
+   "id": "27935c00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8f610e0",
+   "id": "cff05c72",
    "metadata": {},
    "source": [
     "---\n",
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2c3781d",
+   "id": "80129d67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54504a19",
+   "id": "3f48a402",
    "metadata": {},
    "source": [
     "---\n",
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "507f5210",
+   "id": "e428d2d9",
    "metadata": {},
    "source": [
     "### Step 1: Check Current GPU Usage"
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "937eb037",
+   "id": "ed004df8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c21a5090",
+   "id": "c54153d9",
    "metadata": {},
    "source": [
     "### Step 2: Delete Lab 1 Deployment (If Still Running)\n",
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1581157",
+   "id": "d9fcf48f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4f19bef",
+   "id": "37eee704",
    "metadata": {},
    "source": [
     "### Step 3: Verify GPUs Are Available\n",
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0ba8d49",
+   "id": "a76286b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92d77122",
+   "id": "1362a5c1",
    "metadata": {},
    "source": [
     "---\n",
@@ -461,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8d0a2f2",
+   "id": "7fe38576",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3baf59f2",
+   "id": "50ff2785",
    "metadata": {},
    "source": [
     "**Key Configuration Flags:**\n",
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aaa445de",
+   "id": "e754e875",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6d91285",
+   "id": "69a17983",
    "metadata": {},
    "source": [
     "### Step 3: Wait for Deployment"
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "489970e4",
+   "id": "d3d031fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aefc692a",
+   "id": "bdcafa54",
    "metadata": {},
    "source": [
     "### Step 4: Test Basic Inference"
@@ -651,7 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "835c86a9",
+   "id": "8349bb80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "433e5826",
+   "id": "da9b6abc",
    "metadata": {},
    "source": [
     "---\n",
@@ -691,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99e2e6cc",
+   "id": "8a2b45f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97a0c2f7",
+   "id": "ac1a14bd",
    "metadata": {},
    "source": [
     "**Note on Measuring Cache Benefits**:\n",
@@ -756,7 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f351e85",
+   "id": "7e687665",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f43ae06b",
+   "id": "3911760f",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -919,7 +919,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10f3640c",
+   "id": "ef793a58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60289b63",
+   "id": "eaefdf31",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -941,7 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8dfb8d9",
+   "id": "b14f9043",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -952,7 +952,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d1f7227",
+   "id": "1c2e7ade",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -963,26 +963,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30b643ba",
+   "id": "fa1dcaf8",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "pip install aiperf"
+    "pip install -q aiperf"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "41f4aed0",
+   "id": "d3967a30",
    "metadata": {},
    "source": [
-    "**Run benchmarks in a terminal:**"
+    "**Run benchmarks in a terminal (copy and paste these commands):**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc3d9a42",
+   "id": "8ecdaed7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1022,7 +1022,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "676448d4",
+   "id": "cd0a9c61",
    "metadata": {},
    "source": [
     "**What to observe:**\n",
@@ -1064,7 +1064,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b2bdd3a",
+   "id": "cbc61977",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1087,7 +1087,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee53372c",
+   "id": "1666753b",
    "metadata": {},
    "source": [
     "### Workers Not Discovered"
@@ -1096,7 +1096,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22741c30",
+   "id": "0c46a5e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1120,7 +1120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a259232",
+   "id": "724c0020",
    "metadata": {},
    "source": [
     "### No Requests Reaching Workers"
@@ -1129,7 +1129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca06c4d1",
+   "id": "e64fa345",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1153,7 +1153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9da322e",
+   "id": "3b973882",
    "metadata": {},
    "source": [
     "### Understanding Cache Sharing with NIXL\n",
@@ -1187,7 +1187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cea1b3ac",
+   "id": "6af2c7ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1204,7 +1204,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d3858a1",
+   "id": "c90241e9",
    "metadata": {},
    "source": [
     "### Step 2: Verify Lab 1 Deployment is Still Running\n",
@@ -1215,7 +1215,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d914203",
+   "id": "23d9ddd0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1240,7 +1240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0dd2f7a",
+   "id": "4f50fbfd",
    "metadata": {},
    "source": [
     "---\n",
@@ -1257,7 +1257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f8af964",
+   "id": "2ce34d5f",
    "metadata": {},
    "source": [
     "### Community Resources\n",
