Convert AI-Perf section to proper Markdown headers
Changed bold text sections to proper Markdown headers (####):
- **Prerequisites:** → #### Prerequisites
- **Install AI-Perf** → #### Install AI-Perf
- **Run benchmarks in a terminal** → #### Run Benchmarks in a Terminal
- **What to observe:** → #### What to Observe
- **Troubleshooting:** → #### Troubleshooting

Benefits:
- Proper document structure in notebook
- Better table of contents navigation
- Consistent with rest of lab formatting
- Renders better in Jupyter

Also minor wording cleanup:
- 'If not already installed:' on separate line
- 'Copy and paste these commands:' on separate line

--- a/03-kv-aware-routing.ipynb
+++ b/03-kv-aware-routing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5c9088a8",
+   "id": "60205059",
    "metadata": {},
    "source": [
     "# Lab 3: KV-Aware Routing with Data-Parallel Workers\n",
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff67a835",
+   "id": "14ab6d55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "403bffb7",
+   "id": "03495afa",
    "metadata": {},
    "source": [
     "### Step 2: Install NATS with JetStream\n",
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01c05caa",
+   "id": "b26e9144",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9dcd48e4",
+   "id": "84998614",
    "metadata": {},
    "source": [
     "### Step 3: Verify NATS Deployment"
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "765dd071",
+   "id": "eb2a89ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bc22ace",
+   "id": "62d29319",
    "metadata": {},
    "source": [
     "### Step 4: Test NATS Connectivity (Optional)"
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27935c00",
+   "id": "f2ba2176",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cff05c72",
+   "id": "9baa236b",
    "metadata": {},
    "source": [
     "---\n",
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80129d67",
+   "id": "24438da6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f48a402",
+   "id": "3bacdee5",
    "metadata": {},
    "source": [
     "---\n",
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e428d2d9",
+   "id": "1169dfda",
    "metadata": {},
    "source": [
     "### Step 1: Check Current GPU Usage"
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed004df8",
+   "id": "dbd64374",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c54153d9",
+   "id": "9c9aee80",
    "metadata": {},
    "source": [
     "### Step 2: Delete Lab 1 Deployment (If Still Running)\n",
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9fcf48f",
+   "id": "2da9614c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37eee704",
+   "id": "813c6b2f",
    "metadata": {},
    "source": [
     "### Step 3: Verify GPUs Are Available\n",
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a76286b8",
+   "id": "970c0a24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1362a5c1",
+   "id": "45c8d363",
    "metadata": {},
    "source": [
     "---\n",
@@ -461,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fe38576",
+   "id": "5e8d76a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50ff2785",
+   "id": "b8b95f32",
    "metadata": {},
    "source": [
     "**Key Configuration Flags:**\n",
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e754e875",
+   "id": "a7aef3b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69a17983",
+   "id": "8c12cf04",
    "metadata": {},
    "source": [
     "### Step 3: Wait for Deployment"
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3d031fd",
+   "id": "69a33c36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdcafa54",
+   "id": "e8ab8635",
    "metadata": {},
    "source": [
     "### Step 4: Test Basic Inference"
@@ -651,7 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8349bb80",
+   "id": "b5ec586a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da9b6abc",
+   "id": "9dccaa4e",
    "metadata": {},
    "source": [
     "---\n",
@@ -691,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a2b45f3",
+   "id": "c3a5d1c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac1a14bd",
+   "id": "51c0d5e5",
    "metadata": {},
    "source": [
     "**Note on Measuring Cache Benefits**:\n",
@@ -756,7 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e687665",
+   "id": "fb0a4f07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -862,10 +862,8 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3911760f",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "id": "839920b2",
+   "metadata": {},
    "source": [
     "**Understanding the Output:**\n",
     "\n",
@@ -907,11 +905,11 @@
     "\n",
     "### Optional: Experiment with Load Testing\n",
     "\n",
-    "**⚠️ IMPORTANT: Run these commands in a TERMINAL (not in the notebook). AI-Perf can be resource-intensive.**\n",
+    "⚠️ **IMPORTANT: Run these commands in a TERMINAL (not in the notebook). AI-Perf can be resource-intensive.**\n",
     "\n",
     "After completing Step 2 and confirming routing is working, you can experiment with load testing to see multi-worker distribution under concurrent load.\n",
     "\n",
-    "**Prerequisites:**\n",
+    "#### Prerequisites\n",
     "\n",
     "1. Make sure your Lab 3 deployment is running:"
    ]
@@ -919,7 +917,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef793a58",
+   "id": "a9fc97a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -930,10 +928,8 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eaefdf31",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "id": "4f92c310",
+   "metadata": {},
    "source": [
     "2. Verify the NodePort service is accessible:"
    ]
@@ -941,7 +937,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b14f9043",
+   "id": "879258ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -952,18 +948,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c2e7ade",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "id": "05e34a13",
+   "metadata": {},
    "source": [
-    "**Install AI-Perf** (if not already installed):"
+    "#### Install AI-Perf\n",
+    "\n",
+    "If not already installed:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa1dcaf8",
+   "id": "d45b7e92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -973,16 +969,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3967a30",
+   "id": "a0c339ee",
    "metadata": {},
    "source": [
-    "**Run benchmarks in a terminal (copy and paste these commands):**"
+    "#### Run Benchmarks in a Terminal\n",
+    "\n",
+    "Copy and paste these commands:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ecdaed7",
+   "id": "e941b461",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1022,15 +1020,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd0a9c61",
+   "id": "606ca617",
    "metadata": {},
    "source": [
-    "**What to observe:**\n",
+    "#### What to Observe\n",
+    "\n",
     "- TTFT (Time To First Token) - lower is better\n",
     "- Request throughput - higher concurrency should utilize both workers\n",
     "- At high concurrency, check frontend logs to see requests distributed across both workers\n",
     "\n",
-    "**Troubleshooting:**\n",
+    "#### Troubleshooting\n",
+    "\n",
     "- **Connection refused error**: Ensure Lab 3 deployment is running and service is created (Section 4 Step 2)\n",
     "- **Timeout errors**: Model may still be loading, wait 30 seconds and retry\n",
     "- **High error rate**: Check pod logs for issues: `kubectl logs -n dynamo -l nvidia.com/dynamo-component=Frontend`\n",
@@ -1064,7 +1064,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbc61977",
+   "id": "c2c75ca5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1087,7 +1087,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1666753b",
+   "id": "291d7337",
    "metadata": {},
    "source": [
     "### Workers Not Discovered"
@@ -1096,7 +1096,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c46a5e7",
+   "id": "c56d70ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1120,7 +1120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "724c0020",
+   "id": "d2bb15c8",
    "metadata": {},
    "source": [
     "### No Requests Reaching Workers"
@@ -1129,7 +1129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e64fa345",
+   "id": "5ef43c8c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1153,7 +1153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b973882",
+   "id": "8f2dc305",
    "metadata": {},
    "source": [
     "### Understanding Cache Sharing with NIXL\n",
@@ -1187,7 +1187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6af2c7ee",
+   "id": "1f3da5a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1204,7 +1204,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c90241e9",
+   "id": "51a4ed8a",
    "metadata": {},
    "source": [
     "### Step 2: Verify Lab 1 Deployment is Still Running\n",
@@ -1215,7 +1215,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23d9ddd0",
+   "id": "ccac5d60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1240,7 +1240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f50fbfd",
+   "id": "9ea1501b",
    "metadata": {},
    "source": [
     "---\n",
@@ -1257,7 +1257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ce34d5f",
+   "id": "59f23fef",
    "metadata": {},
    "source": [
     "### Community Resources\n",
